# EndpointValidator

./: Cargo.toml  README.md  config.toml
docs/: README.md  services.json
src/: config.rs  helper.rs  lib.rs  log.rs  main.rs
src/cli/: args.rs  input.rs  mod.rs
src/log/: log.rs
src/parser/: loader.rs  mod.rs  models.rs  services.rs
src/tui/: app.rs  mod.rs  state.rs  ui.rs
src/tui/widgets/: button.rs  error.rs  input.rs  json_viewer.rs  list.rs  mod.rs  tabs.rs
src/ws/: basics.rs  client.rs  mod.rs
