[package]
name = "websocket_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "*"
eyre = "*"
futures = "*"
reqwest = { version = "*", default-features = false, features = ["rustls-tls", "serde_json", "json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "*"
tokio = { version = "1.37.0", features = ["full"] }
tokio-tungstenite = { version = "0.20.0", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
toml = "*"
uuid = { version = "1.3.3", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }