[package]
name = "endpoint_validator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "*"
futures = "*"
reqwest = { version = "*", default-features = false, features = ["rustls-tls", "serde_json", "json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "*"
tokio = { version = "1.37.0", features = ["full"] }
tokio-tungstenite = { version = "0.20.0", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
toml = "*"
uuid = { version = "1.3.3", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
read_input = "0.8.6"
ratatui = "0.20.0"
crossterm = "0.28.1"
clap = { version = "4.0", features = ["derive"] }
async-trait = "0.1.50"
anyhow = "1.0"